# cadri-cli

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.sh
cadri_cli/: __init__.py  aws.py  cli.py  collect.py  config.py  empty_instance.py  iam_instance_profile.py  image.py  instance.py  key_pair.py  launch.py  terminate.py  user_data.py
config/: doppeltest.yaml  general.yaml  scenorita.yaml
docs/: persistent_apollo_build.md
scripts/: collect_results.py  launch_instance.py  prepare_image.py
tests/: test_cli.py  test_config.py  test_iam_instance_profile.py  test_image.py  test_instance.py  test_key_pair.py
